# pyhekatan

./: .gitignore  LICENSE  README.md  pyproject.toml  test_fix.py  test_integral_definida.py  test_jce_library.py  test_jce_paper.py  test_placas.py
examples/: rectangular_slab_fea.py
src/hekatan/: __init__.py  __main__.py  calc_engine.py  display.py  magic.py  sympy_bridge.py
tests/: test_display.py
