[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hekatan"
version = "0.6.0"
description = "Python display library for engineering calculations - matrices, equations, formatted output"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Giorgio Burbanelli", email = "giorgioburbanelli89@gmail.com"}
]
keywords = ["engineering", "calculations", "matrix", "equations", "display", "hekatan"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/GiorgioBurbanelli89/pyhekatan"
Repository = "https://github.com/GiorgioBurbanelli89/pyhekatan"
Issues = "https://github.com/GiorgioBurbanelli89/pyhekatan/issues"

[tool.setuptools.packages.find]
where = ["src"]
